# GFSynth

./: LICENSE  README  generate_benchmarks.sh  local_run_gfsynth.py  local_run_reduction_to_ltl.py  plots.py  reduction_to_ltl.py
benchmark/finding_nemo/finding_nemo_1/: 1.agn_safety  1.env_safety  1.tmp  1_env_fst.agn_reach  1_env_fst.agn_safety  1_env_fst.env_gr1  1_env_fst.env_safety  1_env_fst.p
benchmark/finding_nemo/finding_nemo_2/: 2.agn_reach  2.agn_safety  2.p  2.tmp  2_env_fst.agn_safety  2_env_fst.env_gr1  2_env_fst.env_safety
benchmark/finding_nemo/finding_nemo_3/: 3.agn_safety  3.env_safety  3.p  3.tmp  3_env_fst.agn_safety  3_env_fst.env_gr1  3_env_fst.env_safety
benchmark/finding_nemo/finding_nemo_4/: 4.agn_safety  4.env_safety  4.tmp  4_env_fst.agn_safety  4_env_fst.env_gr1  4_env_fst.env_safety  4_env_fst.p
benchmark/finding_nemo/finding_nemo_5/: 5.agn_safety  5.env_safety  5_env_fst.agn_safety  5_env_fst.env_gr1  5_env_fst.env_safety  (+1 more)
benchmark/scripts/: benchmark_generate.py  finding_nemo.py  workstation_resupply.py
tool/Gfsynth/: CMakeLists.txt  INSTALL
tool/Gfsynth/example/: tcp_handshake.agn_reach  tcp_handshake.agn_reach.dfa  tcp_handshake.agn_safety.dfa  tcp_handshake.env_safety.dfa  tcp_handshake.p  tcp_handshake.strategy
tool/Gfsynth/src/synthesis/: CMakeLists.txt  Common.h  DfaGameSynthesizer.h  ExplicitStateDfa.cpp  ExplicitStateDfa.h  GR1Synthesizer.cpp  GR1Synthesizer.h  InputOutputPartition.cpp  LTLfGR1Synthesizer.cpp  LTLfGR1Synthesizer.h  Main.cpp  SymbolicStateDfa.cpp  SymbolicStateDfa.h  Synthesizer.h  VarMgr.cpp  VarMgr.h
(+54 files in other folders)
